@startuml

class Start {
  + main
}


' package Game.play <<Rectangle>>{
  class Game {
    + Play
  }

  Start --> Game

  package GameState.walk <<Rectangle>>{
    class Controller {
    + HandleInput
    }

    class Game_ {
    + Update
    }

    class Render {
    + Render
    }

    .Game ..> Controller
    Controller --> Game_
    Game_ --> Render
    Render --> .Game
  }

  package GameState.talk <<Rectangle>>{
    class Controller__ {
      + AskForMoney
    }
    class Game__{
      + Robbing
    }
    .Game ..> Controller__
    Controller__ --> Game__
    Game__ --> .Game
  }


' }

@enduml